add 增加 (开发、测试、打包)期间必备的jvm参数